themes/harassmap/assets/scss/blocks/_header.scss
@import '../variables';
@import "rem";

.header {

  .header__bar {
    background-color: $green;

    @include rem((padding: 8px 0));

    .user-menu {
      float: right;

      .ar & {
        float: left;
      }

      .dropdown-menu {
        padding: 0;

        li {
          @include rem((padding: 5px));

          a {
            border-bottom: 1px solid $dusty-gray;
            color: $tundora;
            display: block;
            text-transform: none;

            @include rem((padding: 5px));

            &:last-child {
              border: none;
            }
          }
        }
      }
    }

    a {
      color: $white;

      &:hover {
        color: $white;
      }
    }
  }

  .navbar {
    margin: 0 -15px;
    padding-left: 15px;
    padding-right: 15px;
    transition: background-color 0.3s;

    @include rem((padding-top: 8px, padding-bottom: 8px));

    @include media-breakpoint-up(md) {
      margin: 0;
      padding-left: 0;
      padding-right: 0;
    }

    .navbar-toggler-right {
      background-color: $white;
      border: none;
      right: 0;
    }

    .navbar-brand {
      @include rem((padding: 10px 0));

      @include media-breakpoint-up(md) {
        @include rem((padding: 20px 0));
      }

      .site-logo {
        display: none;
        float: left;

        @include rem((padding-right: 14px, height: 50px));

        @include media-breakpoint-up(lg) {
          display: block;

          @include rem((height: 65px));
        }
      }

      .site-name {

        .name {
          display: block;
          font-family: $roboto;
          letter-spacing: 1px;
          text-transform: uppercase;

          @include rem((font-size: 41px, line-height: 41px));

          @include media-breakpoint-up(md) {
            @include rem((font-size: 41px, line-height: 41px));
          }

          @include media-breakpoint-up(lg) {
            @include rem((font-size: 48px, line-height: 48px));
          }

          .namestart {
            color: $tundora;
          }

          .nameend {
            color: $green;
          }
        }

        .tagline {
          display: block;
          color: $tundora;
          font-family: $opensans;
          letter-spacing: 1px;

          @include rem((font-size: 12px, line-height: 12px));

          @include media-breakpoint-up(lg) {
            @include rem((font-size: 14px, line-height: 14px));
          }
        }
      }
    }

    .navbar-collapse {
      color: $white;

      @include media-breakpoint-up(md) {
        color: $black;
        margin: 0;
      }
    }

    &.open {
      background-color: $tundora;

      @include media-breakpoint-up(md) {
        background-color: $white;
      }

      .navbar-toggler-right {
        background-color: $tundora;

        @include media-breakpoint-up(md) {
          background-color: $white;
        }
      }

      .navbar-brand {
        .site-name {
          .name {
            .namestart, .nameend {
              color: $white;
            }
          }
        }
      }
    }

  }

  .nav {
    display: block;
    font-family: $oswald;

    @include rem((font-size: 16px));

    @include media-breakpoint-up(md) {
      display: flex;
    }

    > .nav-item {
      border: none;
      cursor: pointer;
      display: block;
      text-transform: uppercase;

      @include media-breakpoint-up(md) {
        border: 1px solid $white;
        display: list-item;
      }

      > a {
        border-bottom: 1px solid $white;
        color: $white;
        display: block;
        font-weight: $light;

        @include rem((padding: 10px 0, font-size: 24px));

        @include media-breakpoint-up(md) {
          border: none;
          color: $black;
          font-weight: $normal;

          @include rem((padding: 10px 15px, font-size: 16px));
        }
      }

      &:last-child {
        a {
          border: none;
        }
      }

      &:hover {
        a {
          @include media-breakpoint-up(md) {
            color: $green;
          }
        }
      }

      &.dropdown:hover {
        @include media-breakpoint-up(md) {
          border: 1px solid $green;
          border-bottom: none;

          .dropdown-menu {
            display: block;
          }
        }
      }
    }

    .border-block {
      background: $white;
      display: none;
      position: absolute;
      top: 100%;
      left: 0;
      height: 1px;
      width: 100%;
      z-index: 1001;

      @include media-breakpoint-up(md) {
        display: block;
      }
    }

    .dropdown-menu {
      background-color: $tundora;
      border: none;
      float: none;
      position: relative;
      margin: 0 0 0 -1px;
      z-index: 1000;

      @include media-breakpoint-up(md) {
        background-color: $white;
        border: 1px solid $green;
        float: left;
        position: absolute;

      }

      @include rem((padding: 5px 20px 5px 10px));

      a {
        color: $white;
        padding: 0;

        @include media-breakpoint-up(md) {
          color: $green;
        }

        &:hover {
          @include media-breakpoint-up(md) {
            color: $black;
          }
        }
      }

      .nav-item {
        text-transform: capitalize;
        font-weight: $light;

        @include rem((padding: 10px 0, font-size: 16px));

        @include media-breakpoint-up(md) {
          border-bottom: 1px solid $dusty-gray;
          font-weight: $normal;

          &:last-child {
            border-bottom: none;
          }

          @include rem((padding: 5px 0, font-size: 15px));
        }
      }
    }

    a {
      color: $black;

      &:hover {
        @include media-breakpoint-up(md) {
          color: $green;
        }
      }
    }
  }

}

